# RJPG2TIF

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  RjpgPreprocessor.spec  pyproject.toml  requirements.txt  run_app.py  ui_mockup.html
rjpg_preprocessor/: __init__.py  __main__.py  app.py  core.py
