[project]
name = "rjpg2tif"
version = "0.1.0"
description = "Windows desktop tool for converting FLIR Duo Pro R radiometric JPEG files to TIFF/JPG/metadata outputs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "zyang315", email = "zyang315@gmail.com" }
]
dependencies = [
  "PySide6>=6.7",
  "numpy>=1.26",
  "tifffile>=2024.2",
  "Pillow>=10.0",
]

[project.scripts]
rjpg2tif = "rjpg_preprocessor.app:main"

[tool.black]
line-length = 100

